--- a/llvm-ir-to-functional.cabal
+++ b/llvm-ir-to-functional.cabal
@@ -77,6 +77,9 @@ test-suite llvm-ir-to-functional-test
       OverloadedStrings
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      QuickCheck
+    , base >=4.7 && <5
+    , directory
+    , hspec
     , llvm-ir-to-functional
   default-language: Haskell2010
