--- a/llvm-ir-to-functional.cabal
+++ b/llvm-ir-to-functional.cabal
@@ -79,6 +79,7 @@ test-suite llvm-ir-to-functional-test
   build-depends:
       QuickCheck
     , base >=4.7 && <5
+    , bytestring
     , directory
     , hspec
     , llvm-ir-to-functional
