refactor: return and branch as flows

--- a/llvm-ir-to-functional.cabal
+++ b/llvm-ir-to-functional.cabal
@@ -26,6 +26,8 @@ source-repository head
 library
   exposed-modules:
       Ast
+      BeatyPrint
+      GraphViz
       Lexer
       Lib
       Parser
