--- a/package.yaml
+++ b/package.yaml
@@ -42,6 +42,7 @@ library:
   - array
   - base
   - bytestring
+  - mtl
   build-tools:
   - alex
   - happy
@@ -57,6 +58,7 @@ executables:
     dependencies:
     - llvm-ir-to-functional
     - bytestring
+    - mtl
 
 tests:
   llvm-ir-to-functional-test:
