docs: updated author and github

--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                llvm-ir-to-functional
 version:             0.1.0.0
-github:              "githubuser/llvm-ir-to-functional"
+github:              "IgorFroehner/llvm-ir-to-functional"
 license:             BSD-3-Clause
-author:              "Author name here"
+author:              "Igor Froehner"
 maintainer:          "example@example.com"
-copyright:           "2024 Author name here"
+copyright:           "2024 Igor Froehner"
 
 extra-source-files:
 - README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/llvm-ir-to-functional#readme>
+description:         Please see the README on GitHub at <https://github.com/IgorFroehner/llvm-ssa-to-functional>
 
 default-extensions:
 - OverloadedStrings
