--- a/llvm-ir-to-functional.cabal
+++ b/llvm-ir-to-functional.cabal
@@ -6,12 +6,12 @@ cabal-version: 2.2
 
 name:           llvm-ir-to-functional
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/llvm-ir-to-functional#readme>
-homepage:       https://github.com/githubuser/llvm-ir-to-functional#readme
-bug-reports:    https://github.com/githubuser/llvm-ir-to-functional/issues
-author:         Author name here
+description:    Please see the README on GitHub at <https://github.com/IgorFroehner/llvm-ssa-to-functional>
+homepage:       https://github.com/IgorFroehner/llvm-ir-to-functional#readme
+bug-reports:    https://github.com/IgorFroehner/llvm-ir-to-functional/issues
+author:         Igor Froehner
 maintainer:     example@example.com
-copyright:      2024 Author name here
+copyright:      2024 Igor Froehner
 license:        BSD-3-Clause
 license-file:   LICENSE
 build-type:     Simple
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/llvm-ir-to-functional
+  location: https://github.com/IgorFroehner/llvm-ir-to-functional
 
 library
   exposed-modules:
