--- a/llvm-ir-to-functional.cabal
+++ b/llvm-ir-to-functional.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       Ast
+      AstHelpers
       BeatyPrint
       Dominance
       GraphViz
